Updated config files with PR details

--- a/14/crpersonal.config
+++ b/14/crpersonal.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11646
+PR_NAME=dogpoopy
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
