--- a/14/nikgapps-core2.config
+++ b/14/nikgapps-core2.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11645
+PR_NAME=ozz6100
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
