--- a/14/seasky3246A14.config
+++ b/14/seasky3246A14.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11646
+PR_NAME=dogpoopy
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
@@ -5,7 +7,7 @@
 
 AndroidVersion=14
 
-Version=34
+Version=35
 
 # set this to the directory you want to copy the logs to.
 # for e.g. LogDirectory="/system/etc" will install the logs to /system/etc/nikgapps_logs directory
@@ -34,7 +36,7 @@ UseZipConfig=0
 OverwriteWithZipConfig=0
 
 # set this to 1 if you want to enable gms optimization, careful while doing it, you may experience issues like delayed notification with some Roms
-GmsOptimization=1
+GmsOptimization=0
 
 # set this to 0 if you want to skip generating nikgapps logs, if you run into issues, enable it and flash the zip again to get the logs
 GenerateLogs=1
@@ -59,40 +61,40 @@ GoogleClock=0
 
 # Set SetupWizard=0 if you want to skip installing all packages belonging to SetupWizard Package
 SetupWizard=0
->>SetupWizard=1
->>GoogleRestore=1
->>GoogleOneTimeInitializer=1
+>>SetupWizard=0
+>>GoogleRestore=0
+>>GoogleOneTimeInitializer=0
 
 GoogleCalculator=0
 Drive=0
 GoogleMaps=0
 GoogleLocationHistory=1
 GooglePhotos=1
-DeviceHealthServices=0
+DeviceHealthServices=1
 GBoard=1
 GoogleCalendar=1
 GoogleKeep=0
-PlayGames=0
 
 # Set PixelSpecifics=0 if you want to skip installing all packages belonging to PixelSpecifics Package
 PixelSpecifics=0
->>PixelLauncher=1
+>>PixelLauncher=0
 >>DevicePersonalizationServices=1
->>QuickAccessWallet=1
->>GoogleWallpaper=1
+>>GoogleWallpaper=0
+>>QuickAccessWallet=0
 >>SettingsServices=1
 >>PrivateComputeServices=1
->>PixelThemes=1
->>EmojiWallpaper=1
->>PixelWeather=1
+>>PixelThemes=0
+>>EmojiWallpaper=0
+>>PixelWeather=0
 
+PlayGames=0
 GoogleRecorder=0
 
 # Set GoogleFiles=0 if you want to skip installing all packages belonging to GoogleFiles Package
 GoogleFiles=0
->>GoogleFiles=1
->>StorageManager=1
->>DocumentsUIGoogle=1
+>>GoogleFiles=0
+>>StorageManager=0
+>>DocumentsUIGoogle=0
 
 MarkupGoogle=0
 GoogleTTS=0
@@ -108,7 +110,7 @@ GoogleSounds=0
 GoogleChrome=1
 >>GoogleChrome=1
 >>WebViewGoogle=1
->>TrichromeLibrary=1
+>>TrichromeLibrary=0
 
 Gmail=0
 DeviceSetup=0
@@ -129,18 +131,16 @@ GalleryGo=0
 GmailGo=0
 
 # Following are the Addon packages NikGapps supports
-GoogleFi=0
-GoogleDuo=0
+PixelSetupWizard=0
+Meet=0
 GoogleDocs=0
-GoogleSlides=0
 GoogleSheets=0
+GoogleSlides=0
 YouTube=0
 YouTubeMusic=0
 Books=0
-PixelSetupWizard=0
 GoogleTalkback=0
 
 # NikGapps debloater starts here, add all the stuff to add to debloater.config below (for elite and user builds only), check examples below
 # YouTube
 # /system/app/YouTube
-
