--- a/14/vinnikgapps0142808.config
+++ b/14/vinnikgapps0142808.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11651
+PR_NAME=VinayVG3
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
