--- a/14/A14V35Andrea.config
+++ b/14/A14V35Andrea.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11662
+PR_NAME=yxAnDrEaxy
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
