--- a/14/cl0v3r_gapps_a14.config
+++ b/14/cl0v3r_gapps_a14.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11670
+PR_NAME=cl0v3r404
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
