--- a/14/hashiro.config
+++ b/14/hashiro.config
@@ -5,7 +5,7 @@
 
 AndroidVersion=14
 
-Version=34
+Version=35
 
 # set this to the directory you want to copy the logs to.
 # for e.g. LogDirectory="/system/etc" will install the logs to /system/etc/nikgapps_logs directory
@@ -72,20 +72,20 @@ DeviceHealthServices=1
 GBoard=0
 GoogleCalendar=0
 GoogleKeep=0
-PlayGames=0
 
 # Set PixelSpecifics=0 if you want to skip installing all packages belonging to PixelSpecifics Package
 PixelSpecifics=1
 >>PixelLauncher=0
 >>DevicePersonalizationServices=1
->>QuickAccessWallet=0
 >>GoogleWallpaper=0
+>>QuickAccessWallet=0
 >>SettingsServices=0
 >>PrivateComputeServices=0
 >>PixelThemes=0
 >>EmojiWallpaper=0
 >>PixelWeather=0
 
+PlayGames=0
 GoogleRecorder=0
 
 # Set GoogleFiles=0 if you want to skip installing all packages belonging to GoogleFiles Package
@@ -129,15 +129,14 @@ GalleryGo=0
 GmailGo=0
 
 # Following are the Addon packages NikGapps supports
-GoogleFi=0
-GoogleDuo=0
+PixelSetupWizard=0
+Meet=0
 GoogleDocs=0
-GoogleSlides=0
 GoogleSheets=0
+GoogleSlides=0
 YouTube=0
 YouTubeMusic=0
 Books=0
-PixelSetupWizard=0
 GoogleTalkback=1
 
 # NikGapps debloater starts here, add all the stuff to add to debloater.config below (for elite and user builds only), check examples below
