--- a/14/core_with_slight_essentials.config
+++ b/14/core_with_slight_essentials.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11675
+PR_NAME=Aves210200
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
