--- a/14/nb-riva.config
+++ b/14/nb-riva.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11697
+PR_NAME=Sambhrama754
 # NikGapps configuration file
 # NicoBellic custom config
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
