--- a/14/pixel_launcher_only.config
+++ b/14/pixel_launcher_only.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11704
+PR_NAME=Lhn94
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
