--- a/14/trajano.config
+++ b/14/trajano.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11705
+PR_NAME=trajano
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
