--- a/14/nikgapps.config
+++ b/14/nikgapps.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11721
+PR_NAME=Shubhankar74
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
