--- a/14/zuizecqq.config
+++ b/14/zuizecqq.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11760
+PR_NAME=Zuizecqq
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
