--- a/14/nikgapps.config
+++ b/14/nikgapps.config
@@ -4,16 +4,16 @@
 # visit https://nikgapps.com/misc/2022/02/22/NikGapps-Config.html to read everything about nikgapps
 
 AndroidVersion=14
-
+-
 Version=35
 
 # set this to the directory you want to copy the logs to.
 # for e.g. LogDirectory="/system/etc" will install the logs to /system/etc/nikgapps_logs directory
 # by default it will install it to /sdcard/NikGapps/nikgapps_logs
-LogDirectory=default
+LogDirectory=/system_ext/etc
 
 # set to /system, /product or /system_ext if you want to force the installation to aforementioned locations
-InstallPartition=default
+InstallPartition=/system_ext
 
 # set to uninstall if you want to uninstall any google app, also set the value of google app below to -1
 Mode=install
@@ -42,57 +42,57 @@ GenerateLogs=1
 # Following are the packages with default configuration
 
 # Set Core=0 if you want to skip installing all packages belonging to Core Package
-Core=0
->>ExtraFiles=1
+Core=1
+>>ExtraFiles=0
 >>GooglePlayStore=1
->>GoogleServicesFramework=1
->>GoogleContactsSyncAdapter=1
->>GoogleCalendarSyncAdapter=1
->>GmsCore=1
+>>GoogleServicesFramework=0
+>>GoogleContactsSyncAdapter=0
+>>GoogleCalendarSyncAdapter=0
+>>GmsCore=0
 
 DigitalWellbeing=0
 GoogleMessages=1
 GoogleDialer=1
 GoogleContacts=1
-CarrierServices=1
-GoogleClock=0
+CarrierServices=0
+GoogleClock=1
 
 # Set SetupWizard=0 if you want to skip installing all packages belonging to SetupWizard Package
 SetupWizard=0
->>SetupWizard=1
->>GoogleRestore=1
->>GoogleOneTimeInitializer=1
+>>SetupWizard=0
+>>GoogleRestore=0
+>>GoogleOneTimeInitializer=0
 
-GoogleCalculator=1
+GoogleCalculator=0
 Drive=0
-GoogleMaps=0
+GoogleMaps=1
 GoogleLocationHistory=0
-GooglePhotos=0
+GooglePhotos=1
 DeviceHealthServices=0
 GBoard=1
-GoogleCalendar=0
+GoogleCalendar=1
 GoogleKeep=0
 
 # Set PixelSpecifics=0 if you want to skip installing all packages belonging to PixelSpecifics Package
 PixelSpecifics=0
->>PixelLauncher=1
->>DevicePersonalizationServices=1
->>GoogleWallpaper=1
->>QuickAccessWallet=1
->>SettingsServices=1
->>PrivateComputeServices=1
->>PixelThemes=1
->>EmojiWallpaper=1
->>PixelWeather=1
+>>PixelLauncher=0
+>>DevicePersonalizationServices=0
+>>GoogleWallpaper=0
+>>QuickAccessWallet=0
+>>SettingsServices=0
+>>PrivateComputeServices=0
+>>PixelThemes=0
+>>EmojiWallpaper=0
+>>PixelWeather=0
 
 PlayGames=0
 GoogleRecorder=0
 
 # Set GoogleFiles=0 if you want to skip installing all packages belonging to GoogleFiles Package
 GoogleFiles=0
->>GoogleFiles=1
->>StorageManager=1
->>DocumentsUIGoogle=1
+>>GoogleFiles=0
+>>StorageManager=0
+>>DocumentsUIGoogle=0
 
 MarkupGoogle=0
 GoogleTTS=0
@@ -105,7 +105,7 @@ GoogleSearch=1
 GoogleSounds=0
 
 # Set GoogleChrome=0 if you want to skip installing all packages belonging to GoogleChrome Package
-GoogleChrome=0
+GoogleChrome=1
 >>GoogleChrome=1
 >>WebViewGoogle=0
 >>TrichromeLibrary=0
@@ -122,11 +122,11 @@ CoreGo=0
 
 # Setting CoreGo=0 will not skip following packages, set them to 0 if you want to skip them  
 GoogleGo=0
-AssistantGo=1
-MapsGo=1
-NavigationGo=1
-GalleryGo=1
-GmailGo=1
+AssistantGo=0
+MapsGo=0
+NavigationGo=0
+GalleryGo=0
+GmailGo=0
 
 # Following are the Addon packages NikGapps supports
 PixelSetupWizard=0
@@ -142,4 +142,62 @@ GoogleTalkback=0
 # NikGapps debloater starts here, add all the stuff to add to debloater.config below (for elite and user builds only), check examples below
 # YouTube
 # /system/app/YouTube
-
+/product/priv-app/AndroidAutoStub
+/product/app/Calendar_MFV_NubiaCloud
+/system/app/Analytics_ZTE
+/system/app/EasterEgg
+/system/app/LockScreenFramework_MFV
+/system/app/NBBrowser
+/system/app/Recorder_MFV
+/system/app/Sdlog
+/system/app/VideoPlayer_MFV
+/system/app/WallpaperBackup
+/system/priv-app/Gallery_NubiaCloud
+/system/priv-app/HaloBaseApp_Baidu
+/system/priv-app/InspiredWallpaper_RedMagic
+/system/priv-app/IntelliText_MFV
+/system/priv-app/NBGalleryLockScreen
+/system/priv-app/NBGameCenter
+/system/priv-app/NBNeoStore
+/system/priv-app/NubiaMiBoard
+/system/priv-app/NubiaRedmagickyi_RedMagic
+/system/priv-app/RCSService
+/system/priv-app/Search_MFV
+/system/priv-app/SecureKeyboard
+/system/priv-app/SogouInput_RedMagic
+/system/priv-app/Suggest
+/system/priv-app/Tag
+/system/priv-app/ZTEHeartRate_MFV_aidl
+/system_ext/app/MIPop_MFV
+/system/priv-app/NubiaHealthy
+/system/priv-app/NubiaProjectionScreen
+/system_ext/app/RecommendZTE
+/system_ext/partner-app/NBGameMagicVoice
+/system_ext/partner-app/Weather_MFV
+/system_ext/partner-app/Compass_MFV
+/system_ext/partner-app/Calculator_MFV
+/system_ext/partner-app/ExternDevice_RedMagic
+/system_ext/partner-app/InfraredCoolControl
+/system_ext/partner-app/ManualQHB
+/system_ext/partner-app/NotePad-nubia
+/system_ext/partner-app/NubiaBaiduSearch
+/system_ext/partner-app/NubiaBiliBili
+/system_ext/partner-app/NubiaCtrip
+/system_ext/partner-app/NubiaGameWidget
+/system_ext/partner-app/NubiaGDMap
+/system_ext/partner-app/NubiaHuya
+/system_ext/partner-app/NubiaIReader
+/system_ext/partner-app/NubiaQuarkBrowser
+/system_ext/partner-app/NubiaUCBrowser
+/system_ext/partner-app/RedMagicBbs
+/system_ext/partner-app/RedMagicShop
+/system_ext/partner-app/RedTeaApp
+/system_ext/partner-app/UserGuide
+/system_ext/partner-app/VariableWidget
+/system_ext/partner-app/zbackup_mfv
+/system_ext/preinstallapp/Weibo_RedMagic
+/system_ext/priv-app/EmergencyInfo_MFV
+/system_ext/priv-app/QAS_DVC_MSP
+/system_ext/priv-app/QualcommVoiceActivation
+/system/priv-app/AlipayService
+/system/priv-app/ZBackupPlatService
