--- a/14/ultraminimalgapps.config
+++ b/14/ultraminimalgapps.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11765
+PR_NAME=mohithk7899
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
