--- a/14/shoya0x00.config
+++ b/14/shoya0x00.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11779
+PR_NAME=shoya0x00
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
