--- a/14/Minimal11.config
+++ b/14/Minimal11.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11800
+PR_NAME=Rezwan-Ratul778
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
