--- a/14/lu5ck.config
+++ b/14/lu5ck.config
@@ -5,7 +5,7 @@
 
 AndroidVersion=14
 
-Version=34
+Version=35
 
 # set this to the directory you want to copy the logs to.
 # for e.g. LogDirectory="/system/etc" will install the logs to /system/etc/nikgapps_logs directory
@@ -35,6 +35,7 @@ OverwriteWithZipConfig=0
 
 # set this to 1 if you want to enable gms optimization, careful while doing it, you may experience issues like delayed notification with some Roms
 GmsOptimization=0
+
 # set this to 0 if you want to skip generating nikgapps logs, if you run into issues, enable it and flash the zip again to get the logs
 GenerateLogs=0
 
@@ -71,20 +72,20 @@ DeviceHealthServices=0
 GBoard=1
 GoogleCalendar=1
 GoogleKeep=1
-PlayGames=0
 
 # Set PixelSpecifics=0 if you want to skip installing all packages belonging to PixelSpecifics Package
 PixelSpecifics=0
 >>PixelLauncher=1
 >>DevicePersonalizationServices=1
->>QuickAccessWallet=1
 >>GoogleWallpaper=1
+>>QuickAccessWallet=1
 >>SettingsServices=1
 >>PrivateComputeServices=1
 >>PixelThemes=1
 >>EmojiWallpaper=1
 >>PixelWeather=1
 
+PlayGames=0
 GoogleRecorder=1
 
 # Set GoogleFiles=0 if you want to skip installing all packages belonging to GoogleFiles Package
@@ -128,17 +129,17 @@ GalleryGo=0
 GmailGo=0
 
 # Following are the Addon packages NikGapps supports
-GoogleFi=0
-GoogleDuo=0
+PixelSetupWizard=0
+Meet=0
 GoogleDocs=0
-GoogleSlides=0
 GoogleSheets=0
+GoogleSlides=0
 YouTube=0
 YouTubeMusic=0
 Books=0
-PixelSetupWizard=0
 GoogleTalkback=0
 
 # NikGapps debloater starts here, add all the stuff to add to debloater.config below (for elite and user builds only), check examples below
 # YouTube
 # /system/app/YouTube
+
