--- a/10/android-develop.config
+++ b/10/android-develop.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11832
+PR_NAME=AndroidDevelopingSTD
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
