--- a/13/Krish7974.config
+++ b/13/Krish7974.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11833
+PR_NAME=DARKNIGHT7473
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
