--- a/14/Eclipse.config
+++ b/14/Eclipse.config
@@ -3,6 +3,20 @@
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
 # visit https://nikgapps.com/misc/2022/02/22/NikGapps-Config.html to read everything about nikgapps
 
+PR_NUMBER=11332
+
+PR_NAME=MurtazaKolachi
+
+mode=install
+
+execute.d=1
+
+use_zip_config=1
+
+override_with_zip_config=0
+
+gms_optimization=0
+
 AndroidVersion=14
 
 Version=35
@@ -16,7 +30,7 @@ LogDirectory=default
 InstallPartition=default
 
 # set to uninstall if you want to uninstall any google app, also set the value of google app below to -1
-mode=install
+Mode=install
 
 # set WipeDalvikCache=0 if you don't want the installer to wipe dalvik/cache after installing the gapps
 WipeDalvikCache=1
@@ -24,17 +38,20 @@ WipeDalvikCache=1
 # set WipeRuntimePermissions=1 if you want to wipe runtime permissions
 WipeRuntimePermissions=0
 
-# Addon.d config set it to 0 to skip the automatic backup/restore while flashing the rom
-execute.d=1
+# Addon.d config, set it to 0 to skip the automatic backup/restore while flashing the rom
+ExecuteBackupRestore=1
 
 # if you want to force the installer to use the config from gapps zip file, set below to 1
-use_zip_config=1
+UseZipConfig=0
 
-# if you want to override the config located in /sdcard/NikGapps with gapps zip file, set below to 1. Applicable to decrypted storage only
-override_with_zip_config=0
+# if you want to overwrite the config located in /sdcard/NikGapps with gapps zip file, set below to 1. Applicable to decrypted storage only
+OverwriteWithZipConfig=0
 
 # set this to 1 if you want to enable gms optimization, careful while doing it, you may experience issues like delayed notification with some Roms
-gms_optimization=0
+GmsOptimization=0
+
+# set this to 0 if you want to skip generating nikgapps logs, if you run into issues, enable it and flash the zip again to get the logs
+GenerateLogs=1
 
 # Following are the packages with default configuration
 
@@ -49,16 +66,16 @@ Core=1
 
 DigitalWellbeing=0
 GoogleMessages=1
-GoogleDialer=1
+GoogleDialer=0
 GoogleContacts=1
-CarrierServices=1
+CarrierServices=0
 GoogleClock=1
 
 # Set SetupWizard=0 if you want to skip installing all packages belonging to SetupWizard Package
 SetupWizard=0
->>SetupWizard=1
->>GoogleRestore=1
->>GoogleOneTimeInitializer=1
+>>SetupWizard=0
+>>GoogleRestore=0
+>>GoogleOneTimeInitializer=0
 
 GoogleCalculator=1
 Drive=1
@@ -69,20 +86,20 @@ DeviceHealthServices=0
 GBoard=1
 GoogleCalendar=1
 GoogleKeep=0
-PlayGames=0
 
 # Set PixelSpecifics=0 if you want to skip installing all packages belonging to PixelSpecifics Package
 PixelSpecifics=1
 >>PixelLauncher=0
 >>DevicePersonalizationServices=0
->>QuickAccessWallet=0
 >>GoogleWallpaper=0
+>>QuickAccessWallet=0
 >>SettingsServices=0
 >>PrivateComputeServices=0
 >>PixelThemes=0
 >>EmojiWallpaper=0
->>PixelWeather=1
+>>PixelWeather=0
 
+PlayGames=0
 GoogleRecorder=0
 
 # Set GoogleFiles=0 if you want to skip installing all packages belonging to GoogleFiles Package
@@ -126,13 +143,12 @@ GalleryGo=0
 GmailGo=0
 
 # Following are the Addon packages NikGapps supports
-GoogleFi=0
-GoogleDuo=0
+PixelSetupWizard=1
+Meet=0
 GoogleDocs=0
-GoogleSlides=0
 GoogleSheets=0
+GoogleSlides=0
 YouTube=0
 YouTubeMusic=0
 Books=0
-PixelSetupWizard=1
 GoogleTalkback=0
