Updated config files with PR details

--- a/14/crDroidAndroid-vayu.config
+++ b/14/crDroidAndroid-vayu.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11846
+PR_NAME=otiscil
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
