--- a/14/SappyHehe2.config
+++ b/14/SappyHehe2.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11851
+PR_NAME=willyougooutwithme
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
