--- a/14/drorcun.config
+++ b/14/drorcun.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11856
+PR_NAME=drorcun
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
