--- a/14/dabxxbs.config
+++ b/14/dabxxbs.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11880
+PR_NAME=bobbyamarthaa
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
