--- a/14/Plum_Gapps.config
+++ b/14/Plum_Gapps.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11882
+PR_NAME=ItsPlumBTW
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
