--- a/14/Upsidenovelvet.config
+++ b/14/Upsidenovelvet.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11895
+PR_NAME=Mmahiro
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
