--- a/14/a14_64_nairo_nima.config
+++ b/14/a14_64_nairo_nima.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11896
+PR_NAME=ngilani65
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
