--- a/14/tamo.config
+++ b/14/tamo.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11899
+PR_NAME=tamoihl
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
