--- a/14/nikgapps_stepoff_buddy.config
+++ b/14/nikgapps_stepoff_buddy.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11942
+PR_NAME=Atharva-Agnihotri7115
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
