--- a/14/zeddy.config
+++ b/14/zeddy.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11952
+PR_NAME=ShanelkaPramuditha
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
