--- a/14/Ankit-Minimal-No-Dialer.config
+++ b/14/Ankit-Minimal-No-Dialer.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11960
+PR_NAME=fossist
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
