--- a/14/Tejas-plutonic.config
+++ b/14/Tejas-plutonic.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11963
+PR_NAME=TejasSriv
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
