--- a/14/trunars.config
+++ b/14/trunars.config
@@ -5,7 +5,7 @@
 
 AndroidVersion=14
 
-Version=34
+Version=35
 
 # set this to the directory you want to copy the logs to.
 # for e.g. LogDirectory="/system/etc" will install the logs to /system/etc/nikgapps_logs directory
@@ -19,7 +19,7 @@ InstallPartition=default
 Mode=install
 
 # set WipeDalvikCache=0 if you don't want the installer to wipe dalvik/cache after installing the gapps
-WipeDalvikCache=0
+WipeDalvikCache=1
 
 # set WipeRuntimePermissions=1 if you want to wipe runtime permissions
 WipeRuntimePermissions=0
@@ -72,20 +72,20 @@ DeviceHealthServices=1
 GBoard=1
 GoogleCalendar=1
 GoogleKeep=1
-PlayGames=0
 
 # Set PixelSpecifics=0 if you want to skip installing all packages belonging to PixelSpecifics Package
 PixelSpecifics=1
 >>PixelLauncher=1
 >>DevicePersonalizationServices=1
->>QuickAccessWallet=1
 >>GoogleWallpaper=1
+>>QuickAccessWallet=1
 >>SettingsServices=1
 >>PrivateComputeServices=1
 >>PixelThemes=1
 >>EmojiWallpaper=0
->>PixelWeather=1
+>>PixelWeather=0
 
+PlayGames=0
 GoogleRecorder=1
 
 # Set GoogleFiles=0 if you want to skip installing all packages belonging to GoogleFiles Package
@@ -100,9 +100,9 @@ GoogleTTS=1
 # Set GoogleSearch=0 if you want to skip installing all packages belonging to GoogleSearch Package
 GoogleSearch=1
 >>Velvet=1
->>Assistant=1
+>>Assistant=0
 
-GoogleSounds=1
+GoogleSounds=0
 
 # Set GoogleChrome=0 if you want to skip installing all packages belonging to GoogleChrome Package
 GoogleChrome=1
@@ -129,15 +129,14 @@ GalleryGo=0
 GmailGo=0
 
 # Following are the Addon packages NikGapps supports
-GoogleFi=0
-GoogleDuo=0
-GoogleDocs=0
-GoogleSlides=0
-GoogleSheets=0
-YouTube=0
-YouTubeMusic=0
-Books=0
 PixelSetupWizard=0
+Meet=1
+GoogleDocs=1
+GoogleSheets=0
+GoogleSlides=0
+YouTube=1
+YouTubeMusic=1
+Books=0
 GoogleTalkback=0
 
 # NikGapps debloater starts here, add all the stuff to add to debloater.config below (for elite and user builds only), check examples below
