--- a/14/trunars.config
+++ b/14/trunars.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11964
+PR_NAME=trunars
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
