--- a/14/PixelSpecifics-Including-PixelLauncher.config
+++ b/14/PixelSpecifics-Including-PixelLauncher.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11975
+PR_NAME=gstjee
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
