--- a/14/heiz.config
+++ b/14/heiz.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11992
+PR_NAME=Kuerbis-Karotten-Suppe
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
