Update and rename PS LESS SIZE NikGapps Config-less size.config to PSLsize.config

--- a/14/PSLsize.config
+++ b/14/PSLsize.config
@@ -35,11 +35,13 @@ DeviceHealthServices=1
 GBoard=0
 
 PixelSpecifics=1
->>PixelLauncher=1  # Ensures you have the Pixel launcher with search capabilities
+>>PixelLauncher=1  
+# Ensures you have the Pixel launcher with search capabilities
 >>DevicePersonalizationServices=1
 >>GoogleWallpaper=1
 
-GoogleSearch=1  # Enable Google Search for the search bar
+GoogleSearch=1  
+# Enable Google Search for the search bar
 Assistant=1
 GoogleSounds=1
 
