--- a/14/adroid14.config
+++ b/14/adroid14.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11996
+PR_NAME=Kirby10101
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
