--- a/14/l0ngdarkandroid.config
+++ b/14/l0ngdarkandroid.config
@@ -1,3 +1,5 @@
+PR_NUMBER=11998
+PR_NAME=fluxfortress
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
