--- a/12.1/nikgapps.config
+++ b/12.1/nikgapps.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12015
+PR_NAME=zdrawko420
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
