--- a/14/DestroGapps.config
+++ b/14/DestroGapps.config
@@ -1,5 +1,3 @@
-PR_NUMBER=11195
-PR_NAME=dcoxii1979
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
@@ -7,7 +5,7 @@ PR_NAME=dcoxii1979
 
 AndroidVersion=14
 
-Version=34
+Version=35
 
 # set this to the directory you want to copy the logs to.
 # for e.g. LogDirectory="/system/etc" will install the logs to /system/etc/nikgapps_logs directory
@@ -91,7 +89,7 @@ PlayGames=0
 GoogleRecorder=1
 
 # Set GoogleFiles=0 if you want to skip installing all packages belonging to GoogleFiles Package
-GoogleFiles=1
+GoogleFiles=0
 >>GoogleFiles=1
 >>StorageManager=1
 >>DocumentsUIGoogle=1
@@ -140,3 +138,8 @@ YouTube=0
 YouTubeMusic=0
 Books=0
 GoogleTalkback=1
+
+# NikGapps debloater starts here, add all the stuff to add to debloater.config below (for elite and user builds only), check examples below
+# YouTube
+# /system/app/YouTube
+
