--- a/14/afterlife.config
+++ b/14/afterlife.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12038
+PR_NAME=israfilbd
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
