--- a/14/etzi.config
+++ b/14/etzi.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12059
+PR_NAME=etzisim
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
