--- a/14/ASG.config
+++ b/14/ASG.config
@@ -5,12 +5,12 @@
 
 AndroidVersion=14
 
-Version=34
+Version=35
 
 # set this to the directory you want to copy the logs to.
 # for e.g. LogDirectory="/system/etc" will install the logs to /system/etc/nikgapps_logs directory
 # by default it will install it to /sdcard/NikGapps/nikgapps_logs
-LogDirectory="/sdcard/NikGapps"
+LogDirectory=default
 
 # set to /system, /product or /system_ext if you want to force the installation to aforementioned locations
 InstallPartition=default
@@ -22,13 +22,13 @@ Mode=install
 WipeDalvikCache=1
 
 # set WipeRuntimePermissions=1 if you want to wipe runtime permissions
-WipeRuntimePermissions=0
+WipeRuntimePermissions=1
 
 # Addon.d config, set it to 0 to skip the automatic backup/restore while flashing the rom
 ExecuteBackupRestore=1
 
 # if you want to force the installer to use the config from gapps zip file, set below to 1
-UseZipConfig=0
+UseZipConfig=1
 
 # if you want to overwrite the config located in /sdcard/NikGapps with gapps zip file, set below to 1. Applicable to decrypted storage only
 OverwriteWithZipConfig=0
@@ -37,7 +37,7 @@ OverwriteWithZipConfig=0
 GmsOptimization=0
 
 # set this to 0 if you want to skip generating nikgapps logs, if you run into issues, enable it and flash the zip again to get the logs
-GenerateLogs=1
+GenerateLogs=0
 
 # Following are the packages with default configuration
 
@@ -72,20 +72,20 @@ DeviceHealthServices=1
 GBoard=1
 GoogleCalendar=1
 GoogleKeep=1
-PlayGames=1
 
 # Set PixelSpecifics=0 if you want to skip installing all packages belonging to PixelSpecifics Package
 PixelSpecifics=0
 >>PixelLauncher=1
 >>DevicePersonalizationServices=1
->>QuickAccessWallet=1
 >>GoogleWallpaper=1
+>>QuickAccessWallet=1
 >>SettingsServices=1
 >>PrivateComputeServices=1
 >>PixelThemes=1
 >>EmojiWallpaper=1
 >>PixelWeather=1
 
+PlayGames=0
 GoogleRecorder=1
 
 # Set GoogleFiles=0 if you want to skip installing all packages belonging to GoogleFiles Package
@@ -125,19 +125,18 @@ GoogleGo=0
 AssistantGo=0
 MapsGo=0
 NavigationGo=0
-GalleryGo=2
+GalleryGo=0
 GmailGo=0
 
 # Following are the Addon packages NikGapps supports
-GoogleFi=0
-GoogleDuo=0
+PixelSetupWizard=0
+Meet=0
 GoogleDocs=0
-GoogleSlides=0
 GoogleSheets=0
+GoogleSlides=0
 YouTube=0
 YouTubeMusic=0
 Books=0
-PixelSetupWizard=0
 GoogleTalkback=0
 
 # NikGapps debloater starts here, add all the stuff to add to debloater.config below (for elite and user builds only), check examples below
