--- a/14/enji_A14-GApps.config
+++ b/14/enji_A14-GApps.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12100
+PR_NAME=N136tech
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
