--- a/14/Rasa_PixelSetupWizard_NikhilCorrect.config
+++ b/14/Rasa_PixelSetupWizard_NikhilCorrect.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12107
+PR_NAME=RasaJain
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
