--- a/13/lucifer.config
+++ b/13/lucifer.config
@@ -66,7 +66,7 @@ SetupWizard=1
 GoogleCalculator=0
 Drive=0
 GoogleMaps=0
-GoogleLocationHistory=1
+GoogleLocationHistory=0
 GooglePhotos=0
 DeviceHealthServices=1
 GBoard=1
@@ -92,7 +92,7 @@ GoogleFiles=1
 >>StorageManager=1
 >>DocumentsUIGoogle=1
 
-MarkupGoogle=1
+MarkupGoogle=0
 GoogleTTS=1
 
 # Set GoogleSearch=0 if you want to skip installing all packages belonging to GoogleSearch Package
@@ -110,9 +110,9 @@ GoogleChrome=1
 
 Gmail=0
 DeviceSetup=1
-AndroidAuto=1
+AndroidAuto=0
 GoogleFeedback=0
-GooglePartnerSetup=1
+GooglePartnerSetup=
 AndroidDevicePolicy=1
 
 # Set CoreGo=0 if you want to skip installing all packages belonging to CoreGo Package
