--- a/archive/13/20241102/lucifer_20241102.config
+++ b/archive/13/20241102/lucifer_20241102.config
@@ -1,4 +1,4 @@
-PR_NUMBER=12111
+PR_NUMBER=12112
 PR_NAME=MrLucifer-92
 # NikGapps configuration file
 
@@ -68,7 +68,7 @@ SetupWizard=1
 GoogleCalculator=0
 Drive=0
 GoogleMaps=0
-GoogleLocationHistory=1
+GoogleLocationHistory=0
 GooglePhotos=0
 DeviceHealthServices=1
 GBoard=1
@@ -94,7 +94,7 @@ GoogleFiles=1
 >>StorageManager=1
 >>DocumentsUIGoogle=1
 
-MarkupGoogle=1
+MarkupGoogle=0
 GoogleTTS=1
 
 # Set GoogleSearch=0 if you want to skip installing all packages belonging to GoogleSearch Package
@@ -112,9 +112,9 @@ GoogleChrome=1
 
 Gmail=0
 DeviceSetup=1
-AndroidAuto=1
+AndroidAuto=0
 GoogleFeedback=0
-GooglePartnerSetup=1
+GooglePartnerSetup=
 AndroidDevicePolicy=1
 
 # Set CoreGo=0 if you want to skip installing all packages belonging to CoreGo Package
