--- a/elite/15/ionut/full-pixels.config
+++ b/elite/15/ionut/full-pixels.config
@@ -1,14 +1,14 @@
-PR_NUMBER=10866
-PR_NAME=306bobby-android
+PR_NUMBER=10758
+PR_NAME=ionutgherman
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
 # visit https://nikgapps.com/misc/2022/02/22/NikGapps-Config.html to read everything about nikgapps
 
-AndroidVersion=13
+AndroidVersion=15
 
-RELEASE_DATE=2408251777
-Version=35
+RELEASE_DATE=2408131970
+Version=36
 
 # set this to the directory you want to copy the logs to.
 # for e.g. LogDirectory="/system/etc" will install the logs to /system/etc/nikgapps_logs directory
@@ -34,13 +34,13 @@ ExecuteBackupRestore=1
 UseZipConfig=1
 
 # if you want to overwrite the config located in /sdcard/NikGapps with gapps zip file, set below to 1. Applicable to decrypted storage only
-OverwriteWithZipConfig=1
+OverwriteWithZipConfig=0
 
 # set this to 1 if you want to enable gms optimization, careful while doing it, you may experience issues like delayed notification with some Roms
 GmsOptimization=0
 
 # set this to 0 if you want to skip generating nikgapps logs, if you run into issues, enable it and flash the zip again to get the logs
-GenerateLogs=1
+GenerateLogs=0
 
 # Following are the packages with default configuration
 
@@ -54,26 +54,26 @@ Core=1
 >>GmsCore=1
 
 DigitalWellbeing=1
-GoogleMessages=0
-GoogleDialer=0
-GoogleContacts=0
+GoogleMessages=1
+GoogleDialer=2
+GoogleContacts=1
 CarrierServices=1
-GoogleClock=0
+GoogleClock=1
 
 # Set SetupWizard=0 if you want to skip installing all packages belonging to SetupWizard Package
-SetupWizard=1
+SetupWizard=0
 >>SetupWizard=1
 >>GoogleRestore=1
 >>GoogleOneTimeInitializer=1
 
-GoogleCalculator=0
-Drive=0
-GoogleMaps=0
+GoogleCalculator=1
+Drive=1
+GoogleMaps=1
 GoogleLocationHistory=1
-GooglePhotos=0
+GooglePhotos=1
 DeviceHealthServices=1
-GBoard=0
-GoogleCalendar=0
+GBoard=1
+GoogleCalendar=1
 GoogleKeep=0
 PlayGames=0
 
@@ -81,43 +81,44 @@ PlayGames=0
 PixelSpecifics=1
 >>PixelLauncher=0
 >>DevicePersonalizationServices=1
->>QuickAccessWallet=1
+>>QuickAccessWallet=0
 >>GoogleWallpaper=0
->>SettingsServices=0
+>>SettingsServices=1
 >>PrivateComputeServices=1
 >>PixelThemes=0
->>EmojiWallpaper=0
->>PixelWeather=0
+>>EmojiWallpaper=1
+>>PixelWeather=1
+>>AICore=0
 
-GoogleRecorder=0
+GoogleRecorder=1
 
 # Set GoogleFiles=0 if you want to skip installing all packages belonging to GoogleFiles Package
-GoogleFiles=0
->>GoogleFiles=0
->>StorageManager=0
->>DocumentsUIGoogle=0
+GoogleFiles=1
+>>GoogleFiles=1
+>>StorageManager=1
+>>DocumentsUIGoogle=1
 
 MarkupGoogle=1
 GoogleTTS=1
 
 # Set GoogleSearch=0 if you want to skip installing all packages belonging to GoogleSearch Package
-GoogleSearch=0
->>Velvet=0
+GoogleSearch=1
+>>Velvet=1
 >>Assistant=0
 
-GoogleSounds=1
+GoogleSounds=2
 
 # Set GoogleChrome=0 if you want to skip installing all packages belonging to GoogleChrome Package
-GoogleChrome=0
->>GoogleChrome=0
->>WebViewGoogle=0
->>TrichromeLibrary=0
+GoogleChrome=1
+>>GoogleChrome=1
+>>WebViewGoogle=1
+>>TrichromeLibrary=1
 
 Gmail=0
 DeviceSetup=0
 AndroidAuto=1
-GoogleFeedback=0
-GooglePartnerSetup=0
+GoogleFeedback=1
+GooglePartnerSetup=1
 AndroidDevicePolicy=0
 
 # Set CoreGo=0 if you want to skip installing all packages belonging to CoreGo Package
@@ -128,7 +129,7 @@ GoogleGo=0
 AssistantGo=0
 MapsGo=0
 NavigationGo=0
-GalleryGo=0
+GalleryGo=1
 GmailGo=0
 
 # Following are the Addon packages NikGapps supports
@@ -140,10 +141,9 @@ GoogleSheets=0
 YouTube=0
 YouTubeMusic=0
 Books=0
-PixelSetupWizard=0
-GoogleTalkback=0
+PixelSetupWizard=1
+GoogleTalkback=1
 
 # NikGapps debloater starts here, add all the stuff to add to debloater.config below (for elite and user builds only), check examples below
 # YouTube
 # /system/app/YouTube
-
