--- a/10/dailycore-gapps-a10.config
+++ b/10/dailycore-gapps-a10.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12136
+PR_NAME=gasleak08
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
