--- a/11/A11-BasicApps-by-Bloo.config
+++ b/11/A11-BasicApps-by-Bloo.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12141
+PR_NAME=gasleak08
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
