--- a/elite/15/halogenOS/halogenOS.config
+++ b/elite/15/halogenOS/halogenOS.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12146
+PR_NAME=N0m4n904
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
