--- a/elite/15/ionut/full-pixels.config
+++ b/elite/15/ionut/full-pixels.config
@@ -7,6 +7,7 @@ PR_NAME=ionutgherman
 
 AndroidVersion=15
 
+RELEASE_DATE=2411071394
 Version=36
 
 # set this to the directory you want to copy the logs to.
