--- a/14/pavan.config
+++ b/14/pavan.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12153
+PR_NAME=Pavan2507
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
