--- a/14/malpeshU.config
+++ b/14/malpeshU.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12165
+PR_NAME=ameghna
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
