--- a/14/MRF090_CUSTOM.config
+++ b/14/MRF090_CUSTOM.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12169
+PR_NAME=mrf090
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
