--- a/14/nikgapps-fog.config
+++ b/14/nikgapps-fog.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12174
+PR_NAME=alternoegraha
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
