Updated config files with PR details

--- a/14/hashim.config
+++ b/14/hashim.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12178
+PR_NAME=iamhashimalikhan
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
