--- a/14/Ar7.config
+++ b/14/Ar7.config
@@ -50,9 +50,9 @@ Core=1
 >>GoogleCalendarSyncAdapter=1
 >>GmsCore=1
 
-DigitalWellbeing=1
+DigitalWellbeing=0
 GoogleMessages=1
-GoogleDialer=1
+GoogleDialer=0
 GoogleContacts=1
 CarrierServices=1
 GoogleClock=1
@@ -75,17 +75,17 @@ GoogleKeep=1
 
 # Set PixelSpecifics=0 if you want to skip installing all packages belonging to PixelSpecifics Package
 PixelSpecifics=1
->>PixelLauncher=1
+>>PixelLauncher=0
 >>DevicePersonalizationServices=1
 >>GoogleWallpaper=1
 >>QuickAccessWallet=1
 >>SettingsServices=1
 >>PrivateComputeServices=1
->>PixelThemes=1
->>EmojiWallpaper=1
->>PixelWeather=1
+>>PixelThemes=0
+>>EmojiWallpaper=0
+>>PixelWeather=0
 
-PlayGames=1
+PlayGames=
 GoogleRecorder=1
 
 # Set GoogleFiles=0 if you want to skip installing all packages belonging to GoogleFiles Package
@@ -113,31 +113,31 @@ GoogleChrome=1
 Gmail=1
 DeviceSetup=1
 AndroidAuto=1
-GoogleFeedback=1
+GoogleFeedback=0
 GooglePartnerSetup=1
 AndroidDevicePolicy=1
 
 # Set CoreGo=0 if you want to skip installing all packages belonging to CoreGo Package
-CoreGo=1
+CoreGo=0
 
 # Setting CoreGo=0 will not skip following packages, set them to 0 if you want to skip them  
-GoogleGo=1
-AssistantGo=1
-MapsGo=1
-NavigationGo=1
-GalleryGo=1
+GoogleGo=0
+AssistantGo=0
+MapsGo=0
+NavigationGo=0
+GalleryGo=0
 GmailGo=1
 
 # Following are the Addon packages NikGapps supports
-PixelSetupWizard=1
-Meet=1
-GoogleDocs=1
-GoogleSheets=1
-GoogleSlides=1
-YouTube=1
-YouTubeMusic=1
-Books=1
-GoogleTalkback=1
+PixelSetupWizard=0
+Meet=0
+GoogleDocs=0
+GoogleSheets=0
+GoogleSlides=0
+YouTube=0
+YouTubeMusic=0
+Books=0
+GoogleTalkback=0
 
 # NikGapps debloater starts here, add all the stuff to add to debloater.config below (for elite and user builds only), check examples below
 # YouTube
