--- a/14/Ar7.config
+++ b/14/Ar7.config
@@ -78,14 +78,14 @@ PixelSpecifics=1
 >>PixelLauncher=0
 >>DevicePersonalizationServices=1
 >>GoogleWallpaper=1
->>QuickAccessWallet=1
+>>QuickAccessWallet=0
 >>SettingsServices=1
 >>PrivateComputeServices=1
 >>PixelThemes=0
 >>EmojiWallpaper=0
 >>PixelWeather=0
 
-PlayGames=
+PlayGames=0
 GoogleRecorder=1
 
 # Set GoogleFiles=0 if you want to skip installing all packages belonging to GoogleFiles Package
@@ -100,7 +100,7 @@ GoogleTTS=1
 # Set GoogleSearch=0 if you want to skip installing all packages belonging to GoogleSearch Package
 GoogleSearch=1
 >>Velvet=1
->>Assistant=1
+>>Assistant=0
 
 GoogleSounds=1
 
@@ -115,7 +115,7 @@ DeviceSetup=1
 AndroidAuto=1
 GoogleFeedback=0
 GooglePartnerSetup=1
-AndroidDevicePolicy=1
+AndroidDevicePolicy=0
 
 # Set CoreGo=0 if you want to skip installing all packages belonging to CoreGo Package
 CoreGo=0
@@ -126,7 +126,7 @@ AssistantGo=0
 MapsGo=0
 NavigationGo=0
 GalleryGo=0
-GmailGo=1
+GmailGo=0
 
 # Following are the Addon packages NikGapps supports
 PixelSetupWizard=0
