--- a/14/Ar7.config
+++ b/14/Ar7.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12180
+PR_NAME=AmanRaza
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
