--- a/14/Custom.config
+++ b/14/Custom.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12197
+PR_NAME=AlokSagarika
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
