--- a/14/raees.config
+++ b/14/raees.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12203
+PR_NAME=SwitU7Ronald
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
