--- a/14/abdulkarimx1.config
+++ b/14/abdulkarimx1.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12208
+PR_NAME=abdulkarimx1
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
