--- a/14/warners.config
+++ b/14/warners.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12238
+PR_NAME=StarkGang
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
