Moved 14/PoppyOS-Adaline.config to archive/14/20241123/PoppyOS-Adaline_20241123.config

--- a/archive/14/20241123/poppyos-adaline_20241123.config
+++ b/archive/14/20241123/poppyos-adaline_20241123.config
@@ -1,4 +1,4 @@
-PR_NUMBER=12245
+PR_NUMBER=12246
 PR_NAME=Peppitox
 # NikGapps configuration file
 
@@ -66,10 +66,10 @@ SetupWizard=1
 >>GoogleOneTimeInitializer=1
 
 GoogleCalculator=1
-Drive=1
+Drive=0
 GoogleMaps=0
 GoogleLocationHistory=1
-GooglePhotos=1
+GooglePhotos=0
 DeviceHealthServices=1
 GBoard=1
 GoogleCalendar=1
@@ -79,22 +79,22 @@ GoogleKeep=0
 PixelSpecifics=1
 >>PixelLauncher=0
 >>DevicePersonalizationServices=1
->>GoogleWallpaper=1
+>>GoogleWallpaper=0
 >>QuickAccessWallet=1
 >>SettingsServices=1
 >>PrivateComputeServices=1
->>PixelThemes=1
->>EmojiWallpaper=1
->>PixelWeather=1
+>>PixelThemes=0
+>>EmojiWallpaper=0
+>>PixelWeather=0
 
 PlayGames=0
-GoogleRecorder=1
+GoogleRecorder=0
 
 # Set GoogleFiles=0 if you want to skip installing all packages belonging to GoogleFiles Package
-GoogleFiles=1
->>GoogleFiles=1
->>StorageManager=1
->>DocumentsUIGoogle=1
+GoogleFiles=0
+>>GoogleFiles=0
+>>StorageManager=0
+>>DocumentsUIGoogle=0
 
 MarkupGoogle=1
 GoogleTTS=1
@@ -112,12 +112,12 @@ GoogleChrome=1
 >>WebViewGoogle=1
 >>TrichromeLibrary=1
 
-Gmail=1
+Gmail=0
 DeviceSetup=1
 AndroidAuto=1
 GoogleFeedback=1
-GooglePartnerSetup=1
-AndroidDevicePolicy=1
+GooglePartnerSetup=0
+AndroidDevicePolicy=0
 
 # Set CoreGo=0 if you want to skip installing all packages belonging to CoreGo Package
 CoreGo=0
@@ -128,7 +128,7 @@ AssistantGo=0
 MapsGo=0
 NavigationGo=0
 GalleryGo=0
-GmailGo=p
+GmailGo=0
 
 # Following are the Addon packages NikGapps supports
 PixelSetupWizard=0
@@ -137,11 +137,8 @@ GoogleDocs=0
 GoogleSheets=0
 GoogleSlides=0
 YouTube=0
-YouTubeMusic=p
+YouTubeMusic=0
 Books=0
-GoogleTalkback=1
+GoogleTalkback=0
 
-# NikGapps debloater starts here, add all the stuff to add to debloater.config below (for elite and user builds only), check examples below
-# YouTube
-# /system/app/YouTube
 
