--- a/elite/15/CanerKaraca/CanerKaraca.config
+++ b/elite/15/CanerKaraca/CanerKaraca.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12327
+PR_NAME=CanerKaraca23
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
