Updated release date - CanerKaraca.config to 2412010274

--- a/elite/15/CanerKaraca/CanerKaraca.config
+++ b/elite/15/CanerKaraca/CanerKaraca.config
@@ -7,6 +7,7 @@ PR_NAME=CanerKaraca23
 
 AndroidVersion=15
 
+RELEASE_DATE=2412010274
 Version=36
 
 # set this to the directory you want to copy the logs to.
