--- a/13/nikgapps_A13.config
+++ b/13/nikgapps_A13.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12332
+PR_NAME=nay828
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
