Updated config files with PR details

--- a/15/soulLineage.config
+++ b/15/soulLineage.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12358
+PR_NAME=soulspark666
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
