--- a/14/evert_a14.config
+++ b/14/evert_a14.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12362
+PR_NAME=TheDarkLuis
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
