--- a/14/nikgappslineage23.config
+++ b/14/nikgappslineage23.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12364
+PR_NAME=Muhammad-2311
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
