Updated config files with PR details

--- a/15/bangkk-config.config
+++ b/15/bangkk-config.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12507
+PR_NAME=DJRCavalcante
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
