--- a/10/AK-A10.config
+++ b/10/AK-A10.config
@@ -66,8 +66,8 @@ SetupWizard=0
 
 GoogleCalculator=1
 Drive=1
-GoogleMaps=1
-GooglePhotos=1
+GoogleMaps=0
+GooglePhotos=O
 DeviceHealthServices=1
 GBoard=0
 GoogleCalendar=1
