Updated config files with PR details

--- a/15/Invictus596.config
+++ b/15/Invictus596.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12642
+PR_NAME=Invictus596
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
