--- a/15/fellvrnc.config
+++ b/15/fellvrnc.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12651
+PR_NAME=Fellvrnc
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
