--- a/15/Akram99.config
+++ b/15/Akram99.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12806
+PR_NAME=akram-6
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
